<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login_register.PatientRegisterActivity">

        <include
            android:id="@+id/title"
            layout="@layout/title_layout" />

        <ScrollView
            app:layout_constraintVertical_bias="0.2"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user" />

                    <EditText
                        android:id="@+id/et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Nhập tài khoản"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pass" />

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Nhập mật khẩu"
                        android:inputType="textPassword" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name" />

                    <EditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Nguyễn Văn A"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender" />

                    <EditText
                        android:id="@+id/et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Nam / Nữ"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date_of_birth" />

                    <EditText
                        android:id="@+id/et_date_of_birth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="01/01/2000"
                        android:inputType="date" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone" />

                    <EditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="0987654XXX"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/specialist" />

                    <EditText
                        android:id="@+id/et_specialist"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Răng - hàm - mặt"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note" />

                    <EditText
                        android:id="@+id/et_note"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Bác sỹ có nhiều kinh nghiệm"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_control"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/register" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
