<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/top_logo"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ViewFlipper
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/book"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <Button
            android:id="@+id/book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/color_primary_key"
            android:padding="15dp"
            android:text="Đặt lịch khám"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/examination"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/evaluate"
            app:layout_constraintTop_toBottomOf="@+id/book">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_insurance"
                    app:tint="@color/color_primary_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/appointment"
                    android:textColor="@color/color_primary_key" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/evaluate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toRightOf="@id/examination"
            app:layout_constraintRight_toLeftOf="@id/introduce"
            app:layout_constraintTop_toBottomOf="@+id/book">

            <LinearLayout
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Liên hệ"
                    android:textColor="@color/color_primary_key" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/introduce"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toRightOf="@id/evaluate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Thông tin"
                    android:textColor="@color/color_primary_key" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/patient_profile"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toLeftOf="@id/introduce"
            app:layout_constraintRight_toRightOf="@id/introduce"
            app:layout_constraintTop_toBottomOf="@+id/introduce">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_patient"
                    app:tint="@color/color_primary_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/patient"
                    android:textColor="@color/color_primary_key" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/doctor_profile"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toLeftOf="@id/evaluate"
            app:layout_constraintRight_toRightOf="@id/evaluate"
            app:layout_constraintTop_toBottomOf="@+id/evaluate">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_doctor"
                    app:tint="@color/color_primary_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/doctor"
                    android:textColor="@color/color_primary_key" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/register_work_schedule"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toLeftOf="@id/examination"
            app:layout_constraintRight_toRightOf="@id/examination"
            app:layout_constraintTop_toBottomOf="@+id/examination">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_calendar"
                    app:tint="@color/color_primary_key" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/register_work"
                    android:textColor="@color/color_primary_key" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textSize="18dp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:layout_marginBottom="10dp"-->
        <!--            android:text="Hotline : 0394.976.999"-->
        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"/>-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
